--- a/pmlAnalysis.html
+++ b/pmlAnalysis.html
@@ -86,16 +86,20 @@ set.seed(1231) </code></pre>
 </div>
 <div id="explore-structure-of-training-data-not-values" class="section level2">
 <h2>Explore structure of training data (not values)</h2>
-<pre><code>unique(DT$classe)
+<p>Visual inspection of:</p>
+<pre><code>str(DT)
+names(DT)
+unique(DT$classe)
 unique(DT$user_name)
 View(DT)</code></pre>
+<p>The data is a set of timeseries. Most of the variables are summary statistics based on the previous sensor data in the same time frame. Only lines with new_window==“yes” are summary lines.</p>
 </div>
 <div id="select-variables" class="section level2">
 <h2>Select variables</h2>
-<p>The data is a set of timeseries. Most of the variables are summary statistics based on the previous observations in the same time frame. Only lines with new_window==“yes” are summary lines. To use these variables for prediction the test vectors need to be summary lines. We do not know that so that is why I chose only the variables present inn all lines.</p>
+<p>To use the summary variables for prediction the test vectors need to be summary lines. We do not know that to be the case so that is why I chose only the variables present inn all lines. It turned out that none of the lines in the Validation set were summary lines, so that was a good choice.</p>
 <pre><code>sumFet &lt;- which(is.na(DT[23,])|DT[23,]==&quot;&quot;) # See from observation that line 23 is not a summary line
 DT &lt;- DT[,-sumFet,with=FALSE]</code></pre>
-<p>V1, user_name, raw_timestamp_part_1, raw_timestamp_part_2, cvtd_timestamp, new_window, num_window (variables [1:7]) are not sensor data, but related to how the experiment was conducted. The test set and probably the validation set are subsamples of the original training set.Using these experiment variables will probably give you a 100% prediction rate, but that would be a grose overfitting. You could probably make a lookup table.</p>
+<p>V1, user_name, raw_timestamp_part_1, raw_timestamp_part_2, cvtd_timestamp, new_window, num_window (variables [1:7]) are not sensor data, but related to how the experiment was conducted. The test set and probably the validation set are subsamples of the original training set.Using these experiment variables would probably give you a 100% prediction rate, but that would be a grose overfitting. You could probably make a lookup table. The timestamps could have been used in an other context (E.g. summary data over time windows) but would have to be transformed to remove experiment related bias.</p>
 <p>So I exclude [1:7] from training and prediction. For prediction I allso excluded “classe/problem_id” in prediction.</p>
 </div>
 <div id="explore-structure-of-the-remaining-training-data" class="section level2">
@@ -108,9 +112,11 @@ notNum &lt;- which(is.na(tmp3)) # Not numerical variables</code></pre>
 </div>
 <div id="split-training-and-test-we-have-a-validation-set-of-size-20" class="section level2">
 <h2>Split training and test (we have a validation set of size 20)</h2>
-<pre><code>inTrain &lt;-  createDataPartition(y = DT$user_name,p=0.80,list=FALSE) #Sampling considers user_name
-training &lt;- DT[inTrain,]
-testing  &lt;- DT[-inTrain,]</code></pre>
+<pre><code>DF &lt;- as.data.frame(DT) # could not make inTrain-index to work with data.table
+rm(DT)
+inTrain &lt;-  createDataPartition(y = DF$user_name,p=0.80,list=FALSE) #Sampling considers user_name
+training &lt;- DF[inTrain,]
+testing  &lt;- DF[-inTrain,]</code></pre>
 </div>
 <div id="chose-methode-to-build-model" class="section level2">
 <h2>Chose methode to build model</h2>
