--- a/pmlAnalysis.html
+++ b/pmlAnalysis.html
@@ -81,42 +81,40 @@ set.seed(1231) </code></pre>
 </div>
 <div id="read-training-data" class="section level2">
 <h2>Read training data</h2>
-<pre><code>DT &lt;- tbl_dt(fread(&quot;pml-training.csv&quot;,stringsAsFactors=TRUE,
-                   na.strings=&quot;NA&quot;))</code></pre>
+<pre><code>dta &lt;- read.csv(&quot;pml-training.csv&quot;)</code></pre>
+<p>First I got into truble with data.table and fread (stringsAsFactors) that did not play well with createDataPartition and randomForest. read.csv worked without tuning of arguments.</p>
 </div>
 <div id="explore-structure-of-training-data-not-values" class="section level2">
 <h2>Explore structure of training data (not values)</h2>
 <p>Visual inspection of:</p>
-<pre><code>str(DT)
-names(DT)
-unique(DT$classe)
-unique(DT$user_name)
-View(DT)</code></pre>
+<pre><code>str(dta)
+names(dta)
+unique(dta$classe)
+unique(dta$user_name)
+View(dta)</code></pre>
 <p>The data is a set of timeseries. Most of the variables are summary statistics based on the previous sensor data in the same time frame. Only lines with new_window==“yes” are summary lines.</p>
 </div>
 <div id="select-variables" class="section level2">
 <h2>Select variables</h2>
 <p>To use the summary variables for prediction the test vectors need to be summary lines. We do not know that to be the case so that is why I chose only the variables present inn all lines. It turned out that none of the lines in the Validation set were summary lines, so that was a good choice.</p>
-<pre><code>sumFet &lt;- which(is.na(DT[23,])|DT[23,]==&quot;&quot;) # See from observation that line 23 is not a summary line
-DT &lt;- DT[,-sumFet,with=FALSE]</code></pre>
+<pre><code>sumFet &lt;- which(is.na(dta[23,])|dta[23,]==&quot;&quot;) # See from observation that line 23 is not a summary line
+dta &lt;- dta[,-sumFet]</code></pre>
 <p>V1, user_name, raw_timestamp_part_1, raw_timestamp_part_2, cvtd_timestamp, new_window, num_window (variables [1:7]) are not sensor data, but related to how the experiment was conducted. The test set and probably the validation set are subsamples of the original training set.Using these experiment variables would probably give you a 100% prediction rate, but that would be a grose overfitting. You could probably make a lookup table. The timestamps could have been used in an other context (E.g. summary data over time windows) but would have to be transformed to remove experiment related bias.</p>
 <p>So I exclude [1:7] from training and prediction. For prediction I allso excluded “classe/problem_id” in prediction.</p>
 </div>
 <div id="explore-structure-of-the-remaining-training-data" class="section level2">
 <h2>Explore structure of the remaining training data</h2>
-<pre><code>tmp &lt;- sapply(DT,function(x) sum(x==&quot;#DIV/0!&quot;))
-tmp2 &lt;- sapply(DT,function(x) sum(is.na(x)))
-tmp3 &lt;- sapply(DT,mean)
+<pre><code>tmp &lt;- sapply(dta,function(x) sum(x==&quot;#DIV/0!&quot;))
+tmp2 &lt;- sapply(dta,function(x) sum(is.na(x)))
+tmp3 &lt;- sapply(dta,mean)
 notNum &lt;- which(is.na(tmp3)) # Not numerical variables</code></pre>
 <p>These values told me which variables could be used for calculations without modifications. It turned out to be alle the sensor variables.</p>
 </div>
 <div id="split-training-and-test-we-have-a-validation-set-of-size-20" class="section level2">
 <h2>Split training and test (we have a validation set of size 20)</h2>
-<pre><code>DF &lt;- as.data.frame(DT) # could not make inTrain-index to work with data.table
-rm(DT)
-inTrain &lt;-  createDataPartition(y = DF$user_name,p=0.80,list=FALSE) #Sampling considers user_name
-training &lt;- DF[inTrain,]
-testing  &lt;- DF[-inTrain,]</code></pre>
+<pre><code>inTrain &lt;-  createDataPartition(y = dta$user_name,p=0.80,list=FALSE) #Sampling considers user_name
+training &lt;- dta[inTrain,]
+testing  &lt;- dta[-inTrain,]</code></pre>
 </div>
 <div id="chose-methode-to-build-model" class="section level2">
 <h2>Chose methode to build model</h2>
@@ -133,22 +131,22 @@ Read more: http://groupware.les.inf.puc-rio.br/har#ixzz3as43hIvO</code></pre>
 <h2>Train model and use cross validation</h2>
 <p>Idealy I want a Leave-one-person-out Cross Validation with folds based on person (or maybe num_window) (6-fold (1 per person)). The data is a set of timeseries so it is natural to use folding. I did not have the time to find a good way of doing this. So I used a ordinary 6 folds cross validation. That also worked well.</p>
 <p>Training the Random forrest model takes a LONNNNG time on my computer!</p>
-<pre><code>model &lt;- train(classe ~ ., data=training[,8:60,with=FALSE],method=&quot;rf&quot;,
+<pre><code>model &lt;- train(classe ~ ., data=training[,8:60],method=&quot;rf&quot;,
                trControl=trainControl(method=&quot;cv&quot;,number=6),
                prox=TRUE,allowParallel=TRUE)</code></pre>
 </div>
 <div id="predict-training-set-and-estimate-out-of-sample-error" class="section level2">
 <h2>Predict training set and estimate Out-of-sample-error</h2>
-<pre><code>tanswers &lt;- predict(model,newdata=testing[,8:59,with=FALSE])
+<pre><code>tanswers &lt;- predict(model,newdata=testing[,8:59])
 confusionMatrix(tanswers,testing$classe)
 Confusion Matrix and Statistics
 
           Reference
 Prediction    A    B    C    D    E
-         A 1113    4    0    0    0
-         B    0  770    4    0    0
-         C    0    0  675    6    0
-         D    0    0    2  611    2
+         A 1112    5    0    0    0
+         B    0  769    2    0    1
+         C    1    0  675    4    0
+         D    0    0    4  613    1
          E    0    0    0    0  736
 
 Overall Statistics
@@ -164,22 +162,21 @@ Overall Statistics
 Statistics by Class:
 
                      Class: A Class: B Class: C Class: D Class: E
-Sensitivity            1.0000   0.9948   0.9912   0.9903   0.9973
-Specificity            0.9986   0.9987   0.9981   0.9988   1.0000
-Pos Pred Value         0.9964   0.9948   0.9912   0.9935   1.0000
-Neg Pred Value         1.0000   0.9987   0.9981   0.9982   0.9994
+Sensitivity            0.9991   0.9935   0.9912   0.9935   0.9973
+Specificity            0.9982   0.9990   0.9985   0.9985   1.0000
+Pos Pred Value         0.9955   0.9961   0.9926   0.9919   1.0000
+Neg Pred Value         0.9996   0.9984   0.9981   0.9988   0.9994
 Prevalence             0.2837   0.1973   0.1736   0.1573   0.1881
-Detection Rate         0.2837   0.1963   0.1721   0.1557   0.1876
-Detection Prevalence   0.2847   0.1973   0.1736   0.1568   0.1876
-Balanced Accuracy      0.9993   0.9968   0.9947   0.9945   0.9986</code></pre>
-<p>Accuracy : 0.9954 =&gt; Estimated Out of sample error ~ (1-0.9954)=0.0046 (0.46%)</p>
+Detection Rate         0.2835   0.1960   0.1721   0.1563   0.1876
+Detection Prevalence   0.2847   0.1968   0.1733   0.1575   0.1876
+Balanced Accuracy      0.9987   0.9963   0.9948   0.9960   0.9986</code></pre>
+<p>Accuracy : 0.9954 =&gt; Estimated Out of sample error ~ (1-0.9954)=0.0046=0.46%</p>
 </div>
 <div id="read-validation-set" class="section level2">
 <h2>Read validation set</h2>
-<pre><code>validationset &lt;- tbl_dt(fread(&quot;pml-testing.csv&quot;,stringsAsFactors=TRUE,
-                              na.strings=c(&quot;NA&quot;,&quot;&quot;,&quot; &quot;,&quot;#DIV/0!&quot;)))
-validationset &lt;- validationset[,-sumFet,with=FALSE]
-validationset &lt;- validationset[,8:59,with=FALSE]</code></pre>
+<pre><code>validationset &lt;- read.csv(&quot;pml-testing.csv&quot;)
+validationset &lt;- validationset[,-sumFet]
+validationset &lt;- validationset[,8:59]</code></pre>
 </div>
 <div id="predict-20-different-test-cases-validation-set" class="section level2">
 <h2>Predict 20 different test cases (validation set)</h2>
